--- a/backend/package.json
+++ b/backend/package.json
@@ -9,35 +9,42 @@
     "build": "tsc",
     "typeorm": "typeorm-ts-node-commonjs"
   },
-  "keywords": ["hospital", "express", "typeorm", "mysql"],
+  "keywords": [
+    "hospital",
+    "express",
+    "typeorm",
+    "mysql"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "typeorm": "^0.3.17",
-    "mysql2": "^3.6.5",
     "bcryptjs": "^2.4.3",
-    "dotenv": "^16.3.1",
-    "helmet": "^7.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "cors": "^2.8.5",
-    "jsonwebtoken": "^9.0.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.5",
     "nodemailer": "^6.9.7",
+    "typeorm": "^0.3.17",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
-    "@types/nodemailer": "^6.4.14",
     "@types/node": "^20.10.5",
+    "@types/nodemailer": "^6.4.14",
     "@types/uuid": "^9.0.7",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
-} 
+}
