--- a/backend/package.json
+++ b/backend/package.json
@@ -2,23 +2,14 @@
   "name": "hospital-backend",
   "version": "1.0.0",
   "description": "Hospital management system backend",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon --require tsconfig-paths/register src/index.ts",
     "build": "tsc",
+    "start": "node -r tsconfig-paths/register dist/index.js",
     "typeorm": "typeorm-ts-node-commonjs"
   },
-  "keywords": [
-    "hospital",
-    "express",
-    "typeorm",
-    "mysql"
-  ],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@types/yup": "^0.29.14",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -28,9 +19,11 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.7",
+    "tsconfig-paths": "^4.2.0",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.1",
     "yup": "^1.6.1"
@@ -40,10 +33,12 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.10",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.5",
     "@types/nodemailer": "^6.4.14",
     "@types/uuid": "^9.0.7",
+    "@types/yup": "^0.29.14",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
