--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.7",
+    "reflect-metadata": "^0.2.2",
     "tsconfig-paths": "^4.2.0",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.1",
